plugins {
	id 'org.springframework.boot' version '2.2.0.RELEASE'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}

apply plugin: 'groovy'

group = 'com.jakubowskiartur'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {

//	compile.exclude group:'ch.qos.logback',

	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'javax.inject:javax.inject:1'
	compileOnly 'org.projectlombok:lombok'
	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.2'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.0.RELEASE'
	testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.3-groovy-2.5'

}
